--- a/app/views/edu.html
+++ b/app/views/edu.html
@@ -1,3 +1,17 @@
-<div class="">
-  yeah, I have had some education...
+<div class="education">
+  <h2 class="edu-title">Academy of Information Technology</h2>
+  <p class="edu-lead">From 2013 to 2016</p>
+  <p>Bachelor of Information Technology majoring in Mobile App development. Graduated with distinction.</p>
+  <ul class="indented">
+    <li>Development of a 3 tiers app with web services using C#.</li>
+    <li>Development of an e-commerce using Php/JavaScript implementied with an MVC pattern.</li>
+    <li>Development of a simple flight booking system in Java.</li>
+    <li>Development of a data-driven platform using the .NET framework.</li>
+    <li>Development of a cross-platform mobile app using Cordova and Ionic.</li>
+    <li>Development of a iOS mobile-app.</li>
+    <li>Development of an Android mobile-app.</li>
+    <li>UX/UI Design.</li>
+    <li>Database design.</li>
+    <li>Software Engineering principles.</li>
+  </ul>
 </div>
