--- a/app/views/me.html
+++ b/app/views/me.html
@@ -3,6 +3,9 @@
   <img src="images/profile_16.jpg" alt="me" class="profile-me">
   <br>
   <p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+    Hello, my name is Massimo Presta and I am a web developer. Despite I love to
+    write code on either side of the stack, working on the frontend of a project is
+    definetly my strongest suit. I am a humble person and a good communicator.
+    I currenlty work as a tech lead at Pavilion Health.
   </p>
 </div>
