--- a/app/views/skills.html
+++ b/app/views/skills.html
@@ -78,7 +78,7 @@
     </div>
     <br />
     <div class="box">
-      <div class="box-unit">
+      <div class="box-unit no-height">
         <figure class="chart">
           <svg class="frontend-animation" width="100" height="100" data-skill="550">
             <circle class="circle html-color" cx="50" cy="50" r="50" />
@@ -87,7 +87,7 @@
         </figure>
         <span class="legend">Front end</span>
       </div>
-      <div class="box-unit">
+      <div class="box-unit no-height">
         <figure class="chart">
           <svg class="backend-animation" width="100" height="100" data-skill="550">
             <circle class="circle html-color" cx="50" cy="50" r="50" />
