--- a/app/views/work.html
+++ b/app/views/work.html
@@ -1,3 +1,47 @@
-<div class="">
-  I do work and I enjoy what I do.
+<div class="work">
+  <h2 class="work-title">Pavilion Health</h2>
+  <p class="work-lead">From January 2017</p>
+  <p>Tech Lead</p>
+  <div class="indented">
+    <p>
+      Designed the architecture for a file drop integration between two systems.
+      Sprint planning, task estimation and allocation. Managing pull requests and
+      code reviews. Implementation of java microservice integration system.
+      Maintenance of Angular app.
+    </p>
+  </div>
+  <h2 class="work-title">Pavilion Health</h2>
+  <p class="work-lead">From May 2015 to December 2016</p>
+  <p>Junior Developer</p>
+  <div class="indented">
+    <p>
+      Introduced to the company agile methodologies learned @ThoughtWorks LevelUp.
+      Implemented continuous integration with Jenkins. Contributed building an
+      Angular app architecture. Implemented front end building system from scratch
+      using npm and Gulp (Migrated from rails sprockets). Re-designed menu for
+      tree-data visualization. Fixing bugs and maintenance of rails RESTful api
+      and a java microservice architecture. Ensuring code reliability writing
+      unit tests with karma, rspec and Junit.
+    </p>
+  </div>
+  <h2 class="work-title">Freelance job</h2>
+  <p class="work-lead">From April 2016 to April 2017</p>
+  <p>Developer</p>
+  <div class="indented">
+    <p>
+      Developing social-like platform using the MEAN stack, MongoDB, node.js and
+      Angular 1. Develop RESTful api using the express framework. Analyse
+      requirements and user stories definitions. Communication with client.
+    </p>
+  </div>
+  <h2 class="work-title">Freelance job</h2>
+  <p class="work-lead">From December 2014 to February 2015</p>
+  <p>Developer</p>
+  <div class="indented">
+    <p>
+      Implementing contact us form. Implement images display for a chat-like
+      component. Implementing image upload functionality with Javascript.
+      Implementing password.
+    </p>
+  </div>
 </div>
