deployment task implemented

--- a/app/views/me.html
+++ b/app/views/me.html
@@ -5,7 +5,7 @@
   <p>
     Hello, my name is Massimo Presta and I am a web developer. Despite I love to
     write code on either side of the stack, working on the frontend of a project is
-    definetly my strongest suit. I am a humble person and a good communicator.
+    definitely my strongest suit. I am a team worker and a good communicator.
     I currenlty work as a tech lead at Pavilion Health.
   </p>
 </div>
