--- a/app/views/me.html
+++ b/app/views/me.html
@@ -3,9 +3,10 @@
   <img src="images/profile_16.jpg" alt="me" class="profile-me">
   <br>
   <p>
-    Hello, my name is Massimo Presta and I am a web developer. Despite I love to
+    Hello, my name is Massimo Presta and I am a Software Engineer. Despite I love to
     write code on either side of the stack, working on the frontend of a project is
     definitely my strongest suit. I am a team worker and a good communicator.
-    I currenlty work as a tech lead at Pavilion Health.
+    I currenlty work as a Platform Engineer at SmartSparrow focusing on writing backend
+    web services.
   </p>
 </div>
