--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -110,9 +110,8 @@ body.is-hidden {
   display: inline-block;
   width: 250px;
   height: 250px;
-  text-align: center;
-  // border-radius: 6px;
   margin-right: 3px;
+  margin-top: -5px;
 }
 
 .separator {
