--- a/app/views/skills.html
+++ b/app/views/skills.html
@@ -77,7 +77,7 @@
       </div>
     </div>
     <br />
-    <div class="box">
+    <!-- <div class="box">
       <div class="box-unit no-height">
         <figure class="chart">
           <svg class="frontend-animation" width="100" height="100" data-skill="550">
@@ -96,129 +96,7 @@
         </figure>
         <span class="legend">Back end</span>
       </div>
-    </div>
-    <!-- <div class="box"> -->
-      <!-- <div class="box-unit">
-        <figure class="chart">
-          <svg class="html-animation" width="100" height="100" data-skill="550">
-            <circle class="circle html-color" cx="50" cy="50" r="50" />
-          </svg>
-          <svg id="html" viewBox="0 0 24 24">
-            <path d="M12,17.56L16.07,16.43L16.62,10.33H9.38L9.2,8.3H16.8L17,6.31H7L7.56,12.32H14.45L14.22,14.9L12,15.5L9.78,14.9L9.64,13.24H7.64L7.93,16.43L12,17.56M4.07,3H19.93L18.5,19.2L12,21L5.5,19.2L4.07,3Z" />
-          </svg>
-        </figure> -->
-        <!-- <p>
-          Html is more than just divs.
-        </p> -->
-      <!-- </div>
-      <div class="box-unit">
-        <figure class="chart">
-          <svg class="css-animation" width="100" height="100" data-skill="437">
-            <circle class="circle css-color" cx="50" cy="50" r="50" />
-          </svg>
-          <svg id="css" viewBox="0 0 24 24">
-            <path d="M5,3L4.35,6.34H17.94L17.5,8.5H3.92L3.26,11.83H16.85L16.09,15.64L10.61,17.45L5.86,15.64L6.19,14H2.85L2.06,18L9.91,21L18.96,18L20.16,11.97L20.4,10.76L21.94,3H5Z" />
-          </svg>
-        </figure> -->
-        <!-- <p>
-          I have been coding css for 4 years and it has become part of my daily job
-          to solve browser compatibility issues as well as to develop simple and
-          effective styles and sometimes animations.
-        </p> -->
-      <!-- </div>
-      <div class="box-unit">
-        <figure class="chart">
-          <svg class="js-animation" width="100" height="100" data-skill="595">
-            <circle class="circle js-color" cx="50" cy="50" r="50" />
-          </svg>
-          <svg id="js" viewBox="0 0 24 24">
-            <path d="M3,3H21V21H3V3M7.73,18.04C8.13,18.89 8.92,19.59 10.27,19.59C11.77,19.59 12.8,18.79 12.8,17.04V11.26H11.1V17C11.1,17.86 10.75,18.08 10.2,18.08C9.62,18.08 9.38,17.68 9.11,17.21L7.73,18.04M13.71,17.86C14.21,18.84 15.22,19.59 16.8,19.59C18.4,19.59 19.6,18.76 19.6,17.23C19.6,15.82 18.79,15.19 17.35,14.57L16.93,14.39C16.2,14.08 15.89,13.87 15.89,13.37C15.89,12.96 16.2,12.64 16.7,12.64C17.18,12.64 17.5,12.85 17.79,13.37L19.1,12.5C18.55,11.54 17.77,11.17 16.7,11.17C15.19,11.17 14.22,12.13 14.22,13.4C14.22,14.78 15.03,15.43 16.25,15.95L16.67,16.13C17.45,16.47 17.91,16.68 17.91,17.26C17.91,17.74 17.46,18.09 16.76,18.09C15.93,18.09 15.45,17.66 15.09,17.06L13.71,17.86Z" />
-          </svg>
-        </figure> -->
-        <!-- <p>
-          Javascript is what I have been focusing on for the past three years.
-          My daily job is develop and maintain a client built on the AngularJS
-          framework although I do prefer to code in vanilla JS.
-        </p> -->
-      <!-- </div>
-      <div class="box-unit">
-        <figure class="chart">
-          <svg class="node-animation" width="100" height="100" data-skill="490">
-            <circle class="circle node-color" class="outer" cx="50" cy="50" r="50" />
-          </svg>
-          <svg id="node" viewBox="0 0 24 24">
-            <path d="M12,1.85C11.73,1.85 11.45,1.92 11.22,2.05L3.78,6.35C3.3,6.63 3,7.15 3,7.71V16.29C3,16.85 3.3,17.37 3.78,17.65L5.73,18.77C6.68,19.23 7,19.24 7.44,19.24C8.84,19.24 9.65,18.39 9.65,16.91V8.44C9.65,8.32 9.55,8.22 9.43,8.22H8.5C8.37,8.22 8.27,8.32 8.27,8.44V16.91C8.27,17.57 7.59,18.22 6.5,17.67L4.45,16.5C4.38,16.45 4.34,16.37 4.34,16.29V7.71C4.34,7.62 4.38,7.54 4.45,7.5L11.89,3.21C11.95,3.17 12.05,3.17 12.11,3.21L19.55,7.5C19.62,7.54 19.66,7.62 19.66,7.71V16.29C19.66,16.37 19.62,16.45 19.55,16.5L12.11,20.79C12.05,20.83 11.95,20.83 11.88,20.79L10,19.65C9.92,19.62 9.84,19.61 9.79,19.64C9.26,19.94 9.16,20 8.67,20.15C8.55,20.19 8.36,20.26 8.74,20.47L11.22,21.94C11.46,22.08 11.72,22.15 12,22.15C12.28,22.15 12.54,22.08 12.78,21.94L20.22,17.65C20.7,17.37 21,16.85 21,16.29V7.71C21,7.15 20.7,6.63 20.22,6.35L12.78,2.05C12.55,1.92 12.28,1.85 12,1.85M14,8C11.88,8 10.61,8.89 10.61,10.39C10.61,12 11.87,12.47 13.91,12.67C16.34,12.91 16.53,13.27 16.53,13.75C16.53,14.58 15.86,14.93 14.3,14.93C12.32,14.93 11.9,14.44 11.75,13.46C11.73,13.36 11.64,13.28 11.53,13.28H10.57C10.45,13.28 10.36,13.37 10.36,13.5C10.36,14.74 11.04,16.24 14.3,16.24C16.65,16.24 18,15.31 18,13.69C18,12.08 16.92,11.66 14.63,11.35C12.32,11.05 12.09,10.89 12.09,10.35C12.09,9.9 12.29,9.3 14,9.3C15.5,9.3 16.09,9.63 16.32,10.66C16.34,10.76 16.43,10.83 16.53,10.83H17.5C17.55,10.83 17.61,10.81 17.65,10.76C17.69,10.72 17.72,10.66 17.7,10.6C17.56,8.82 16.38,8 14,8Z" />
-          </svg>
-        </figure> -->
-        <!-- <p>
-          Node came to my attention for its versatility. I worked with node on
-          building tools, restful APIs with express, electron and small file
-          system operations.
-        </p> -->
-      <!-- </div>
-      <div class="box-unit">
-        <figure class="chart">
-          <svg class="java-animation" width="100" height="100" data-skill="386">
-            <circle class="circle java-color" cx="50" cy="50" r="50" />
-          </svg>
-          <svg id="java" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1000 1000" enable-background="new 0 0 1000 1000" xml:space="preserve">
-            <metadata> Svg Vector Icons : http://www.onlinewebfonts.com/icon </metadata>
-            <g><g transform="translate(0.000000,253.000000) scale(0.100000,-0.100000)"><path d="M6061.9,2261.3c55-448.4-145.6-951.9-546.8-1365c-133.7-133.7-452.4-413-712-621.5c-794.6-633.3-1081.8-987.3-1081.8-1337.5c0-247.8,59-424.8,240-700.2c157.3-243.9,975.6-1121.1,1011-1081.8c11.8,7.9-110.1,204.6-267.5,436.7c-381.6,566.4-487.8,798.5-487.8,1097.5c0,358,173.1,653,621.5,1058.2C5735.4,554,6061.9,947.4,6183.8,1372.3c106.2,361.9,66.9,826.1-82.6,1014.9C6042.2,2461.9,6042.2,2450.1,6061.9,2261.3z"/><path d="M6769.9,345.6C5373.5-161.9,4787.3-909.3,5153.2-1707.9c59-125.9,165.2-299,236-385.5c287.2-350.1,334.4-621.5,161.3-920.5c-102.3-181-82.6-181,157.3,15.7c318.6,251.7,476,582.2,413,865.4c-19.7,78.7-129.8,287.2-251.8,464.2c-118,173.1-239.9,401.3-263.6,499.6c-47.2,169.2-43.3,200.6,59,401.2c153.4,322.6,558.6,660.9,1424,1195.9C7202.6,499,7155.4,487.2,6769.9,345.6z"/><path d="M7666.8-2868.3c-267.5-51.1-346.2-118-110.1-90.5c523.2,59,861.5-440.6,617.6-912.6c-106.2-208.5-491.7-562.5-802.5-739.5c-279.3-157.3-263.6-177,51.1-66.9c542.9,184.9,987.4,495.6,1140.8,798.6c98.3,192.7,98.3,523.1,4,672.6c-102.3,153.4-314.7,298.9-476,326.5c-78.7,11.8-169.2,27.5-200.6,35.4C7859.6-2840.8,7757.3-2848.6,7666.8-2868.3z"/><path d="M3139.1-3021.7c-381.6-86.5-908.7-306.8-967.7-401.2c-102.3-165.2,346.2-287.2,1302.1-354c1160.4-78.7,2840.1,82.6,3304.3,314.7c114.1,55.1,200.6,110.1,192.7,118c-7.9,7.8-208.5-15.8-444.5-47.2c-1400.4-200.6-3272.8-232.1-3595.4-63c-188.8,102.3,15.7,255.7,554.7,417c263.6,82.6,279.3,90.5,137.7,90.5C3536.4-2950.9,3320.1-2982.4,3139.1-3021.7z"/><path d="M3229.6-4158.6c-342.2-157.3-373.7-334.4-82.6-476c586.1-279.3,2088.8-287.1,3284.6-7.8l291.1,66.8l-200.6,125.9l-200.6,125.9l-306.8-55.1c-621.5-114.1-1337.5-149.4-1903.9-106.2c-295,23.6-582.2,62.9-641.2,86.5c-125.9,47.3-169.2,141.6-106.2,240c23.6,43.3,39.3,74.7,35.4,74.7C3390.9-4083.8,3316.1-4119.2,3229.6-4158.6z"/><path d="M3485.3-5228.5c-251.8-102.3-310.8-291.1-125.9-420.9c133.8-94.4,393.4-184.9,696.3-251.8c302.9-59,1223.4-59,1553.8,3.9c330.4,62.9,904.8,236,904.8,271.4c0,15.7-114.1,78.7-251.8,141.6c-251.7,110.2-255.7,110.2-542.9,59c-397.3-74.8-1723-66.8-1939.3,7.9c-121.9,43.3-157.3,74.7-153.4,145.6C3630.8-5177.4,3623-5173.4,3485.3-5228.5z"/><path d="M2187.2-5948.4c-275.4-74.7-653-259.7-747.4-358c-212.4-224.2-3.9-338.3,806.4-448.4C3029-6861,3800-6916.1,4555.3-6916.1c1982.6,0,3862.9,428.8,3646.5,834c-19.7,39.3-55,70.8-78.7,70.8c-23.6,0-27.5-15.7-15.7-39.3c47.2-74.7-59-184.9-251.8-271.4c-731.7-314.7-3681.9-452.4-5074.5-240c-365.8,59-778.9,184.9-802.5,251.8c-43.3,114.1,236,267.5,660.9,357.9l236,51.2h-255.7C2478.3-5901.2,2285.5-5920.8,2187.2-5948.4z"/><path d="M8579.5-6566c-102.3-161.3-971.6-420.9-1821.3-546.8c-1109.3-161.3-2914.9-180.9-3784.3-43.3c-118,19.7-224.2,31.5-228.1,23.6c-27.5-23.6,283.2-98.3,680.5-165.2c511.4-86.5,2619.8-98.3,3245.3-19.7c1070,133.8,1770.2,381.5,1931.4,680.5C8646.3-6550.2,8626.7-6487.3,8579.5-6566z"/></g></g>
-          </svg>
-        </figure> -->
-        <!-- <p>
-          I enjoy writing object oriented code and writing Junit specs. Some of the work
-          I have done recently is contributions to develop and maintain a Java microservice architecture
-          and the development of a file drop integration and a transaction driven integration
-          between two platforms.
-        </p> -->
-      <!-- </div>
-      <div class="box-unit">
-        <figure class="chart">
-          <svg class="ruby-animation" width="100" height="100" data-skill="349">
-            <circle class="circle ruby-color" cx="50" cy="50" r="50" />
-          </svg>
-          <svg id="ruby" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1000 1000" enable-background="new 0 0 1000 1000" xml:space="preserve">
-            <metadata> Svg Vector Icons : http://www.onlinewebfonts.com/icon </metadata>
-            <g><g><path d="M745,132.5H255l-245,245l490,490l490-490L745,132.5z M132.5,377.5l183.8-183.8h367.5l183.8,183.8L500,745L132.5,377.5z M683.8,255H500v428.8l306.3-306.3L683.8,255z"/></g></g>
-          </svg>
-        </figure> -->
-        <!-- <p>
-          I am always trying to improve my ruby and RoR skills.
-        </p> -->
-      <!-- </div> -->
-      <!-- <div class="box-unit">
-        <figure class="chart">
-          <svg class="personal-animation" width="100" height="100" data-skill="349">
-            <circle class="circle personal-color" cx="50" cy="50" r="50" />
-          </svg>
-          <svg id="personal" viewBox="0 0 24 24">
-              <path d="M9,11.75A1.25,1.25 0 0,0 7.75,13A1.25,1.25 0 0,0 9,14.25A1.25,1.25 0 0,0 10.25,13A1.25,1.25 0 0,0 9,11.75M15,11.75A1.25,1.25 0 0,0 13.75,13A1.25,1.25 0 0,0 15,14.25A1.25,1.25 0 0,0 16.25,13A1.25,1.25 0 0,0 15,11.75M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,20C7.59,20 4,16.41 4,12C4,11.71 4,11.42 4.05,11.14C6.41,10.09 8.28,8.16 9.26,5.77C11.07,8.33 14.05,10 17.42,10C18.2,10 18.95,9.91 19.67,9.74C19.88,10.45 20,11.21 20,12C20,16.41 16.41,20 12,20Z" />
-          </svg>
-        </figure> -->
-        <!-- <p>
-          I am a positive kind of guy with great communiction skills. I like to
-          work with people.
-        </p> -->
-      <!-- </div>
-      <div class="box-unit">
-        <figure class="chart">
-          <svg class="dev-animation" width="100" height="100" data-skill="349">
-            <circle class="circle dev-color" cx="50" cy="50" r="50" />
-          </svg>
-          <svg id="dev" viewBox="0 0 24 24">
-              <path d="M22.7,19L13.6,9.9C14.5,7.6 14,4.9 12.1,3C10.1,1 7.1,0.6 4.7,1.7L9,6L6,9L1.6,4.7C0.4,7.1 0.9,10.1 2.9,12.1C4.8,14 7.5,14.5 9.8,13.6L18.9,22.7C19.3,23.1 19.9,23.1 20.3,22.7L22.6,20.4C23.1,20 23.1,19.3 22.7,19Z" />
-          </svg>
-        </figure> -->
-        <!-- <p>
-          I use gulp to serve and build the client. Npm and bower to manage
-          the dependencies. Obviously git, mainly on terminal (although gitKraken
-          is pretty nice). Go and Jenkins for CI.
-        </p> -->
-      <!-- </div> -->
-    <!-- </div> -->
+    </div> -->
   </div>
   <p>
-
-  <!-- </p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. -->
 </div>
