--- a/app/views/me.html
+++ b/app/views/me.html
@@ -6,7 +6,8 @@
     Hello, my name is Massimo Presta and I am a Software Engineer. Despite I love to
     write code on either side of the stack, working on the frontend of a project is
     definitely my strongest suit. I am a team worker and a good communicator.
-    I currenlty work as a Platform Engineer at SmartSparrow focusing on writing backend
-    web services.
+    I currenlty work as a Platform Engineer at
+    <a href="https://www.smartsparrow.com/" target="_blank">Smart Sparrow</a>
+    focusing on implementing backend web services.
   </p>
 </div>
