--- a/app/styles/edu.scss
+++ b/app/styles/edu.scss
@@ -13,10 +13,10 @@
   .edu-lead {
     margin-top: -15px;
     color: grey;
-    font-family: 'Bungee Inline', cursive;
+    // font-family: 'Bungee Inline', cursive;
   }
 
   .edu-title {
-    font-family: 'Bungee Inline', cursive;
+    // font-family: 'Bungee Inline', cursive;
   }
 }
