--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -64,7 +64,7 @@ body.is-hidden {
   border-radius: 4px;
   font-size: 25px;
   color: #FFF;
-  font-family: 'Bungee Inline', cursive;
+  // font-family: 'Bungee Inline', cursive;
   text-decoration: none;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
