--- a/app/styles/work.scss
+++ b/app/styles/work.scss
@@ -12,10 +12,10 @@
   .work-lead {
     margin-top: -15px;
     color: grey;
-    font-family: 'Bungee Inline', cursive;
+    // font-family: 'Bungee Inline', cursive;
   }
 
   .work-title {
-    font-family: 'Bungee Inline', cursive;
+    // font-family: 'Bungee Inline', cursive;
   }
 }
