--- a/app/views/me.html
+++ b/app/views/me.html
@@ -3,11 +3,11 @@
   <img src="images/profile_16.jpg" alt="me" class="profile-me">
   <br>
   <p>
-    Hello, my name is Massimo Presta and I am a Software Engineer. Despite I love to
-    write code on either side of the stack, working on the frontend of a project is
-    definitely my strongest suit. I am a team worker and a good communicator.
-    I currenlty work as a Platform Engineer at
+    Hello, my name is Massimo Presta and I am a Software Engineer. I really enjoy to write
+    code on either side of the stack, from designing Cassandra data models and Implementing
+    web APIs in Java, to create client web apps using Vue and scss. I am a positive thinker,
+    a team player and a good communicator. I currenlty work as a Platform Engineer at
     <a href="https://www.smartsparrow.com/" target="_blank">Smart Sparrow</a>
-    focusing on implementing backend web services.
+    focusing on delivering server side solutions, implementing web services and exposing APIs.
   </p>
 </div>
