--- a/app/views/skills.html
+++ b/app/views/skills.html
@@ -6,28 +6,10 @@
   <div class="modal-section">
     <div class="bar-container">
       <p class="skill-name">
-        HTML
+        Java
       </p>
       <div class="outer-bar">
-        <div class="inner-bar html-skill">
-        </div>
-      </div>
-    </div>
-    <div class="bar-container">
-      <p class="skill-name">
-        CSS
-      </p>
-      <div class="outer-bar">
-        <div class="inner-bar css-skill">
-        </div>
-      </div>
-    </div>
-    <div class="bar-container">
-      <p class="skill-name">
-        JavaScript
-      </p>
-      <div class="outer-bar">
-        <div class="inner-bar javascript-skill">
+        <div class="inner-bar java-skill">
         </div>
       </div>
     </div>
@@ -42,10 +24,46 @@
     </div>
     <div class="bar-container">
       <p class="skill-name">
-        Java
+        Cassandra
       </p>
       <div class="outer-bar">
-        <div class="inner-bar java-skill">
+        <div class="inner-bar cassandra-skill">
+        </div>
+      </div>
+    </div>
+    <div class="bar-container">
+      <p class="skill-name">
+        MongoDB
+      </p>
+      <div class="outer-bar">
+        <div class="inner-bar mongo-skill">
+        </div>
+      </div>
+    </div>
+    <div class="bar-container">
+      <p class="skill-name">
+        HTML
+      </p>
+      <div class="outer-bar">
+        <div class="inner-bar html-skill">
+        </div>
+      </div>
+    </div>
+    <div class="bar-container">
+      <p class="skill-name">
+        Css/scss
+      </p>
+      <div class="outer-bar">
+        <div class="inner-bar css-skill">
+        </div>
+      </div>
+    </div>
+    <div class="bar-container">
+      <p class="skill-name">
+        JavaScript
+      </p>
+      <div class="outer-bar">
+        <div class="inner-bar javascript-skill">
         </div>
       </div>
     </div>
@@ -69,10 +87,28 @@
     </div>
     <div class="bar-container">
       <p class="skill-name">
-        MONGO DB
+        Vue
       </p>
       <div class="outer-bar">
-        <div class="inner-bar mongo-skill">
+        <div class="inner-bar vue-skill">
+        </div>
+      </div>
+    </div>
+    <div class="bar-container">
+      <p class="skill-name">
+        Bash
+      </p>
+      <div class="outer-bar">
+        <div class="inner-bar bash-skill">
+        </div>
+      </div>
+    </div>
+    <div class="bar-container">
+      <p class="skill-name">
+        GraphQL
+      </p>
+      <div class="outer-bar">
+        <div class="inner-bar graphql-skill">
         </div>
       </div>
     </div>
