--- a/app/styles/nav.scss
+++ b/app/styles/nav.scss
@@ -17,7 +17,7 @@
 }
 
 .resume-btn {
-  font-family: 'Bungee Inline', cursive;
+  // font-family: 'Bungee Inline', cursive;
   &:hover {
     cursor: pointer;
   }
