--- a/app/views/resume.html
+++ b/app/views/resume.html
@@ -9,17 +9,17 @@
     <hr>
     <div class="res-skills">
       <ul>
-        <li>HTML, Css, Sass</li>
-        <li>Bootstrap, Angular Material</li>
-        <li>Javascript, Angular 1, JQuery</li>
-        <li>Jasmine, Karma, Gulp</li>
-        <li>Node, npm</li>
+        <li>Java, Cassandra, MySQL</li>
+        <li>Node.js, MongoDB</li>
+        <li>JavaScript, Angular 1, Vue</li>
+        <li>Jest, Gulp</li>
+        <li>HTML, scss, bulma</li>
       </ul>
       <ul>
-        <li>Git, Bitbucket, Trello</li>
-        <li>Java, Spring, JPA, JUnit</li>
+        <li>Git, Gitlab, Github</li>
+        <li>Jira, Trello</li>
         <li>Ruby on Rails, Rspec</li>
-        <li>MySql, MongoDb</li>
+        <li>Electron</li>
         <li>Jenkins, AWS</li>
       </ul>
     </div>
@@ -28,22 +28,23 @@
     <h2 class="res-title">Academy of Information Technology</h2>
     <p class="res-lead">From 2013 to 2016</p>
     <p>Bachelor of Information Technology majoring in Mobile App development. Graduated with distinction.</p>
-    <!-- <ul class="list-indented">
-      <li>Development of a 3 tiers app with web services using C#.</li>
-      <li>Development of an e-commerce using Php/JavaScript implementied with an MVC pattern.</li>
-      <li>Development of a simple flight booking system in Java.</li>
-      <li>Development of a data-driven platform using the .NET framework.</li>
-      <li>Development of a cross-platform mobile app using Cordova and Ionic.</li>
-      <li>Development of a iOS mobile-app.</li>
-      <li>Development of an Android mobile-app.</li>
-      <li>UX/UI Design.</li>
-      <li>Database design.</li>
-      <li>Software Engineering principles.</li>
-    </ul> -->
     <h1>Work experience</h1>
     <hr>
+    <h2 class="work-title">Smart Sparrow</h2>
+    <p class="work-lead">From July 2017 till now</p>
+    <p>Platform Engineer</p>
+    <div class="indented">
+      <p>
+        Implementation core architecture of a multi-threaded websocket messaging API.
+        Implementation of various RESTful web-services in a non-blocking fashion.
+        Designing data structure represented in Cassandra tables. Unit tests with
+        Jupiter, integration tests with Citrus using Cucumber (Framework configuration
+        and maintenance). Agile methodologies kanban and scrum. Analysis of user stories
+        and requirement gathering to define success criteria and meet product owner expectations.
+      </p>
+    </div>
     <h2 class="res-title">Pavilion Health</h2>
-    <p class="res-lead">From January 2017</p>
+    <p class="res-lead">From January 2017 to July 2017</p>
     <p>Tech Lead</p>
     <div class="res-indented">
       <p>
@@ -88,6 +89,18 @@
       </p>
     </div>
   </div>
+  <br>
+  <h1>Projects</h1>
+  <hr>
+  <h2 class="res-title">Argos 2</h2>
+  <p class="res-lead">Electron app to test websocket APIs and GraphQL queries</p>
+  <a href="https://github.com/Mexassi/argos2">https://github.com/Mexassi/argos2</a>
+  <br>
+  <h2 class="res-title">Scatter-gather</h2>
+  <p class="res-lead">Static blog powered by Vue.js with internal tool to self manage posts collection</p>
+  <a href="https://github.com/Mexassi/scatter-gather">https://github.com/Mexassi/scatter-gather</a>
+  <br>
+  <br>
   <br>
   <div class="action res-centered print-resume">
     <a class="action-button shadow animate gray" onclick="namespace.printResume()">print</a>
