--- a/app/views/work.html
+++ b/app/views/work.html
@@ -1,13 +1,25 @@
 <div class="work">
+  <h2 class="work-title">Smart Sparrow</h2>
+  <p class="work-lead">From July 2017 till now</p>
+  <p>Platform Engineer</p>
+  <div class="indented">
+    <p>
+      Implementation core architecture of a multi-threaded websocket messaging API.
+      Implementation of various RESTful web-services in a non-blocking fashion.
+      Designing data structure represented in Cassandra tables. Unit tests with
+      Jupiter, integration tests with Citrus using Cucumber (Framework configuration
+      and maintenance). Agile methodologies kanban and scrum. Analysis of user stories
+      and requirement gathering to define success criteria and meet product owner expectations.
+    </p>
+  </div>
   <h2 class="work-title">Pavilion Health</h2>
-  <p class="work-lead">From January 2017</p>
+  <p class="work-lead">From January 2017 to july 2017</p>
   <p>Tech Lead</p>
   <div class="indented">
     <p>
       Designed the architecture for a file drop integration between two systems.
-      Sprint planning, task estimation and allocation. Managing pull requests and
-      code reviews. Implementation of java microservice integration system.
-      Maintenance of Angular app.
+      Sprint planning, task estimation and allocation. Implementation of
+      java microservice integration system. Maintenance of Angular app.
     </p>
   </div>
   <h2 class="work-title">Pavilion Health</h2>
