--- a/app/views/resume.html
+++ b/app/views/resume.html
@@ -11,16 +11,15 @@
       <ul>
         <li>Java, Cassandra, MySQL</li>
         <li>Node.js, MongoDB</li>
-        <li>JavaScript, Angular 1, Vue</li>
-        <li>Jest, Gulp</li>
+        <li>JavaScript, Vue</li>
         <li>HTML, scss, bulma</li>
       </ul>
       <ul>
         <li>Git, Gitlab, Github</li>
         <li>Jira, Trello</li>
-        <li>Ruby on Rails, Rspec</li>
         <li>Electron</li>
-        <li>Jenkins, AWS</li>
+        <li>Good communication</li>
+        <li>Team player</li>
       </ul>
     </div>
     <h1>Education</h1>
@@ -73,9 +72,8 @@
     <p>Developer</p>
     <div class="res-indented">
       <p>
-        Developing social-like platform using the MEAN stack, MongoDB, node.js and
-        Angular 1. Develop RESTful api using the express framework. Analyse
-        requirements and user stories definitions. Communication with client.
+        Contributor in developing social-like platform using the MEAN stack, MongoDB, node.js and
+        Angular 1. Develop RESTful api using the express.js framework. Communication with client.
       </p>
     </div>
     <h2 class="res-title">Freelance job</h2>
@@ -90,14 +88,14 @@
     </div>
   </div>
   <br>
-  <h1>Projects</h1>
+  <h1>On going side projects</h1>
   <hr>
   <h2 class="res-title">Argos 2</h2>
   <p class="res-lead">Electron app to test websocket APIs and GraphQL queries</p>
   <a href="https://github.com/Mexassi/argos2">https://github.com/Mexassi/argos2</a>
   <br>
-  <h2 class="res-title">Scatter-gather</h2>
-  <p class="res-lead">Static blog powered by Vue.js with internal tool to self manage posts collection</p>
+  <h2 class="res-title">Bookmarking web platform</h2>
+  <p class="res-lead">Powered by express.js, MongoDB backend and Vue.js frontend</p>
   <a href="https://github.com/Mexassi/scatter-gather">https://github.com/Mexassi/scatter-gather</a>
   <br>
   <br>
