--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -4,7 +4,8 @@
 
 body {
   background: #fafafa;
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  // font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Open Sans', sans-serif;
   color: #333;
 }
 
